--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio Eduardo Carmo</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
+    <title>Portfolio Eduardo Carmo</title>
 </head>
 <body>
-    
+    <nav id="desktop-nav">
+        <div class="logo">Eduardo Carmo</div>
+        <div>
+            <ul class="nav-link">
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#experience">Experiência</a></li>
+                <li><a href="#projects">Projetos</a></li>
+                <li><a href="#contact">Contato</a></li>
+            </ul>
+        </div>
+    </nav>
+    <nav id="hamburger-nav">
+        <div class="logo">Eduardo Carmo</div>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon" onclick="toggLeMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="menu-links">
+                <li><a href="#about" onclick="toggLeMenu()">About</a></li>
+                <li><a href="#experience" onclick="toggLeMenu()">Experience</a></li>
+                <li><a href="#projects" onclick="toggLeMenu()">Projects</a></li>
+                <li><a href="#contact" onclick="toggLeMenu()">Contact</a></li>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
