criação da section profile

--- a/index.html
+++ b/index.html
@@ -35,5 +35,31 @@
             </div>
         </div>
     </nav>
+    <section id="profile"></section>
+        <div class="section__pic-container" alt="Eduardo Carmo profile picture">
+            <img src="./assets/foto-perfil-edu.png" alt="">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Olá, Eu sou </p>
+            <h1 class="title">Eduardo Carmo</h1>
+            <p class="section__text__p2">Desenvolvedor Full Stack</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/curriculo.pdf')">Download CV</button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contato</button>
+            </div>
+            <div id="socials-container">
+                <img src="./assets/LinkedIn_icon.svg" 
+                alt="My linkedin Profile"
+                class="icon" 
+                onclick="location.href='https://www.linkedin.com/in/eduardo-carmo-453348174/'">
+                
+                <img src="./assets/github.svg" 
+                alt="My linkedin Profile"
+                class="icon" 
+                onclick="location.href='https://github.com/EduCarmo'">
+            </div>
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
