criação da pagina sobre

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </nav>
-    <section id="profile"></section>
+    <section id="profile">
         <div class="section__pic-container" alt="Eduardo Carmo profile picture">
             <img src="./assets/foto-perfil-edu.png" alt="">
         </div>
@@ -59,6 +59,53 @@
                 onclick="location.href='https://github.com/EduCarmo'">
             </div>
         </div>
+    </section>
+    <section id="about">
+        <p class="section__text__p1" id="teste">Saiba mais</p>
+        <h1 class="title">Sobre mim</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img 
+                src="./assets/about.png" 
+                alt="Profile picture"
+                class="about-pic">
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                            <img 
+                            src="./assets/experience.png" 
+                            alt="expierience icon"
+                            class="icon"
+                            />                 
+                            <h3>Experiência</h3>
+                            <p>1+ anos <br/> Desenvolvedor Full Stack </p>
+                    </div>
+                    <div class="details-container">
+                        <img 
+                        src="./assets/education.png" 
+                        alt="Education icon"
+                        class="icon"
+                        />
+                        <h3>Educação</h3>
+                        <p>Tecnólogo<br/> Análise e Desenvolvimento de Sistemas </p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p> 
+                        Sou Eduardo Carmo, desenvolvedor full stack formado em Análise e Desenvolvimento de Sistemas. 
+                        Tenho paixão por transformar ideias em soluções eficientes e funcionais, 
+                        sempre buscando inovação e impacto nos projetos que desenvolvemos.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <img 
+        src="./assets/arrow.png" 
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='#experience'"
+        >
     </section>
     <script src="script.js"></script>
 </body>
