--- a/index.html
+++ b/index.html
@@ -107,6 +107,120 @@
         onclick="location.href='#experience'"
         >
     </section>
+    <section id="experience">
+        <p class="section__text__p1">Explore minhas</p>
+        <h1 class="title">Experiencias</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Desenvolvimento Frontend</h2>
+                    <div class="article-container">
+                        <article>
+                            <img 
+                            src="./assets/checkmark.svg" 
+                            alt="Experience icon"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experiencia</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.svg" 
+                            alt="Experience icon"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>CSS</h3>
+                                <p>Experiencia</p>
+                            </div>
+                        </article>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.svg" 
+                            alt="Experience icon"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.svg" 
+                            alt="Experience icon"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>TypeScript</h3>
+                                <p>Basico</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Desenvolvimento Backend</h2>
+                    <div class="article-container">
+                        <article>
+                            <img 
+                            src="./assets/checkmark.svg" 
+                            alt="Experience icon"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>PostgreSQL</h3>
+                                <p>Intermediario</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.svg" 
+                            alt="Experience icon"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>Node JS</h3>
+                                <p>Bacico</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.svg" 
+                            alt="Experience icon"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>Express JS</h3>
+                                <p>Intermediario</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.svg" 
+                            alt="Experience icon"
+                            class="icon"
+                            >
+                            <div>
+                                <h3>Git</h3>
+                                <p>Intermediario</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+        <img 
+        src="./assets/arrow.png" 
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='#projects'"
+        >
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
