--- a/index.html
+++ b/index.html
@@ -221,6 +221,87 @@
         onclick="location.href='#projects'"
         >
     </section>
+    <section id="projects">
+        <p class="section__text__p1">Navegue pelos meus recentes</p>
+        <h1 class="title">Projetos</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/project-1.jpeg" 
+                        alt="Project 1"
+                        class="project-img"
+                        >
+                    </div>
+                    <h2 class="experience-sub-title project-title">Projeto 01</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/EduCarmo'"
+                        >
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/EduCarmo'"
+                        >
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/project-1.jpeg" 
+                        alt="Project 1"
+                        class="project-img"
+                        >
+                    </div>
+                    <h2 class="experience-sub-title project-title">Projeto 02</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/EduCarmo'"
+                        >
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/EduCarmo'"
+                        >
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/project-1.jpeg" 
+                        alt="Project 1"
+                        class="project-img"
+                        >
+                    </div>
+                    <h2 class="experience-sub-title project-title">Projeto 03</h2>
+                    <div class="btn-container">
+                        <button 
+                        class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/EduCarmo'"
+                        >
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/EduCarmo'"
+                        >
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img 
+        src="./assets/arrow.png" 
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='#contact'"
+        >
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
