--- a/index.html
+++ b/index.html
@@ -302,6 +302,32 @@
         onclick="location.href='#contact'"
         >
     </section>
+    <section id="contact">
+        <p class="section__text__p1">Entre em contato</p>
+        <h1 class="title">Contate me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img 
+                src="./assets/email.png"
+                alt="Email icon"
+                class="icon contact-icon email-icon"
+                >
+                <p>
+                    <a href="eduardocarmo72@gmail.com">eduardocarmo72@gmail.com</a>
+                </p>
+            </div>
+            <div class="contact-info-container">
+                <img 
+                src="./assets/LinkedIn_icon.svg"
+                alt="LinkedIn icon"
+                class="icon contact-icon"
+                >
+                <p>
+                    <a href="https://www.linkedin.com/in/eduardo-carmo-453348174/">Linkedin</a>
+                </p>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
