--- a/index.html
+++ b/index.html
@@ -328,6 +328,19 @@
             </div>
         </div>
     </section>
+    <footer>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-link">
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#experience">Experiência</a></li>
+                    <li><a href="#projects">Projetos</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul>
+            </div>
+        </nav>
+        <p>Desenvolvido por Eduardo</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
