feito correção no botão de contato

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="mediaqueries.css" />
     <title>Portfolio Eduardo Carmo</title>
 </head>
+
 <body>
     <nav id="desktop-nav">
         <div class="logo">Eduardo Carmo</div>
@@ -45,18 +47,15 @@
             <p class="section__text__p2">Desenvolvedor Full Stack</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/curriculo.pdf')">Download CV</button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contato</button>
+                <button class="btn btn-color-1" onclick="window.location.href='#contact'">Contato</button>
+
             </div>
             <div id="socials-container">
-                <img src="./assets/LinkedIn_icon.svg" 
-                alt="My linkedin Profile"
-                class="icon" 
-                onclick="location.href='https://www.linkedin.com/in/eduardo-carmo-453348174/'">
-                
-                <img src="./assets/github.svg" 
-                alt="My linkedin Profile"
-                class="icon" 
-                onclick="location.href='https://github.com/EduCarmo'">
+                <img src="./assets/LinkedIn_icon.svg" alt="My linkedin Profile" class="icon"
+                    onclick="location.href='https://www.linkedin.com/in/eduardo-carmo-453348174/'">
+
+                <img src="./assets/github.svg" alt="My linkedin Profile" class="icon"
+                    onclick="location.href='https://github.com/EduCarmo'">
             </div>
         </div>
     </section>
@@ -65,47 +64,31 @@
         <h1 class="title">Sobre mim</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img 
-                src="./assets/about.png" 
-                alt="Profile picture"
-                class="about-pic">
+                <img src="./assets/about.png" alt="Profile picture" class="about-pic">
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                            <img 
-                            src="./assets/experience.png" 
-                            alt="expierience icon"
-                            class="icon"
-                            />                 
-                            <h3>Experiência</h3>
-                            <p>1+ anos <br/> Desenvolvedor Full Stack </p>
+                        <img src="./assets/experience.png" alt="expierience icon" class="icon" />
+                        <h3>Experiência</h3>
+                        <p>1+ anos <br /> Desenvolvedor Full Stack </p>
                     </div>
                     <div class="details-container">
-                        <img 
-                        src="./assets/education.png" 
-                        alt="Education icon"
-                        class="icon"
-                        />
+                        <img src="./assets/education.png" alt="Education icon" class="icon" />
                         <h3>Educação</h3>
-                        <p>Tecnólogo<br/> Análise e Desenvolvimento de Sistemas </p>
+                        <p>Tecnólogo<br /> Análise e Desenvolvimento de Sistemas </p>
                     </div>
                 </div>
                 <div class="text-container">
-                    <p> 
-                        Sou Eduardo Carmo, desenvolvedor full stack formado em Análise e Desenvolvimento de Sistemas. 
-                        Tenho paixão por transformar ideias em soluções eficientes e funcionais, 
+                    <p>
+                        Sou Eduardo Carmo, desenvolvedor full stack formado em Análise e Desenvolvimento de Sistemas.
+                        Tenho paixão por transformar ideias em soluções eficientes e funcionais,
                         sempre buscando inovação e impacto nos projetos que desenvolvemos.
                     </p>
                 </div>
             </div>
         </div>
-        <img 
-        src="./assets/arrow.png" 
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='#experience'"
-        >
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#experience'">
     </section>
     <section id="experience">
         <p class="section__text__p1">Explore minhas</p>
@@ -116,22 +99,14 @@
                     <h2 class="experience-sub-title">Desenvolvimento Frontend</h2>
                     <div class="article-container">
                         <article>
-                            <img 
-                            src="./assets/checkmark.svg" 
-                            alt="Experience icon"
-                            class="icon"
-                            >
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>HTML</h3>
                                 <p>Experiencia</p>
                             </div>
                         </article>
                         <article>
-                            <img 
-                            src="./assets/checkmark.svg" 
-                            alt="Experience icon"
-                            class="icon"
-                            >
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>CSS</h3>
                                 <p>Experiencia</p>
@@ -139,22 +114,14 @@
                         </article>
                         </article>
                         <article>
-                            <img 
-                            src="./assets/checkmark.svg" 
-                            alt="Experience icon"
-                            class="icon"
-                            >
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>JavaScript</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
                         <article>
-                            <img 
-                            src="./assets/checkmark.svg" 
-                            alt="Experience icon"
-                            class="icon"
-                            >
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>TypeScript</h3>
                                 <p>Basico</p>
@@ -166,44 +133,28 @@
                     <h2 class="experience-sub-title">Desenvolvimento Backend</h2>
                     <div class="article-container">
                         <article>
-                            <img 
-                            src="./assets/checkmark.svg" 
-                            alt="Experience icon"
-                            class="icon"
-                            >
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>PostgreSQL</h3>
                                 <p>Intermediario</p>
                             </div>
                         </article>
                         <article>
-                            <img 
-                            src="./assets/checkmark.svg" 
-                            alt="Experience icon"
-                            class="icon"
-                            >
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>Node JS</h3>
                                 <p>Bacico</p>
                             </div>
                         </article>
                         <article>
-                            <img 
-                            src="./assets/checkmark.svg" 
-                            alt="Experience icon"
-                            class="icon"
-                            >
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>Express JS</h3>
                                 <p>Intermediario</p>
                             </div>
                         </article>
                         <article>
-                            <img 
-                            src="./assets/checkmark.svg" 
-                            alt="Experience icon"
-                            class="icon"
-                            >
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>Git</h3>
                                 <p>Intermediario</p>
@@ -211,15 +162,10 @@
                         </article>
                     </div>
                 </div>
-                
+
             </div>
         </div>
-        <img 
-        src="./assets/arrow.png" 
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='#projects'"
-        >
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#projects'">
     </section>
     <section id="projects">
         <p class="section__text__p1">Navegue pelos meus recentes</p>
@@ -228,100 +174,68 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img 
-                        src="./assets/project-1.jpeg" 
-                        alt="Project 1"
-                        class="project-img"
-                        >
+                        <img src="./assets/project-1.jpeg" alt="Project 1" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">Projeto 01</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/EduCarmo'"
-                        >
+                            onclick="location.href='https://github.com/EduCarmo'">
                             Github
                         </button>
                         <button class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/EduCarmo'"
-                        >
+                            onclick="location.href='https://github.com/EduCarmo'">
                             Live Demo
                         </button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img 
-                        src="./assets/project-1.jpeg" 
-                        alt="Project 1"
-                        class="project-img"
-                        >
+                        <img src="./assets/project-1.jpeg" alt="Project 1" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">Projeto 02</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/EduCarmo'"
-                        >
+                            onclick="location.href='https://github.com/EduCarmo'">
                             Github
                         </button>
                         <button class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/EduCarmo'"
-                        >
+                            onclick="location.href='https://github.com/EduCarmo'">
                             Live Demo
                         </button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img 
-                        src="./assets/project-1.jpeg" 
-                        alt="Project 1"
-                        class="project-img"
-                        >
+                        <img src="./assets/project-1.jpeg" alt="Project 1" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">Projeto 03</h2>
                     <div class="btn-container">
-                        <button 
-                        class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/EduCarmo'"
-                        >
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/EduCarmo'">
                             Github
                         </button>
                         <button class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/EduCarmo'"
-                        >
+                            onclick="location.href='https://github.com/EduCarmo'">
                             Live Demo
                         </button>
                     </div>
                 </div>
             </div>
         </div>
-        <img 
-        src="./assets/arrow.png" 
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='#contact'"
-        >
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#contact'">
     </section>
     <section id="contact">
         <p class="section__text__p1">Entre em contato</p>
         <h1 class="title">Contate me</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
-                <img 
-                src="./assets/email.png"
-                alt="Email icon"
-                class="icon contact-icon email-icon"
-                >
+                <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon">
                 <p>
                     <a href="eduardocarmo72@gmail.com">eduardocarmo72@gmail.com</a>
                 </p>
             </div>
             <div class="contact-info-container">
-                <img 
-                src="./assets/LinkedIn_icon.svg"
-                alt="LinkedIn icon"
-                class="icon contact-icon"
-                >
+                <img src="./assets/LinkedIn_icon.svg" alt="LinkedIn icon" class="icon contact-icon">
                 <p>
                     <a href="https://www.linkedin.com/in/eduardo-carmo-453348174/">Linkedin</a>
                 </p>
@@ -343,4 +257,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
