alterações nos dados

--- a/index.html
+++ b/index.html
@@ -102,22 +102,21 @@
                             <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>HTML</h3>
-                                <p>Experiencia</p>
+                                <p>Intermediario</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>CSS</h3>
-                                <p>Experiencia</p>
+                                <p>Intermediario</p>
                             </div>
-                        </article>
                         </article>
                         <article>
                             <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Basic</p>
+                                <p>Intermediario</p>
                             </div>
                         </article>
                         <article>
@@ -125,6 +124,20 @@
                             <div>
                                 <h3>TypeScript</h3>
                                 <p>Basico</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
+                            <div>
+                                <h3>React</h3>
+                                <p>Intermediario</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
+                            <div>
+                                <h3>Boostrap</h3>
+                                <p>Intermediario</p>
                             </div>
                         </article>
                     </div>
@@ -149,7 +162,14 @@
                         <article>
                             <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
-                                <h3>Express JS</h3>
+                                <h3>Java</h3>
+                                <p>Intermediario</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
+                            <div>
+                                <h3>Spring Boot</h3>
                                 <p>Intermediario</p>
                             </div>
                         </article>
@@ -174,41 +194,9 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-1.jpeg" alt="Project 1" class="project-img">
+                        <img src="./assets/project-1.JPG" alt="Project 1" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">Projeto 01</h2>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/EduCarmo'">
-                            Github
-                        </button>
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/EduCarmo'">
-                            Live Demo
-                        </button>
-                    </div>
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/project-1.jpeg" alt="Project 1" class="project-img">
-                    </div>
-                    <h2 class="experience-sub-title project-title">Projeto 02</h2>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/EduCarmo'">
-                            Github
-                        </button>
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/EduCarmo'">
-                            Live Demo
-                        </button>
-                    </div>
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/project-1.jpeg" alt="Project 1" class="project-img">
-                    </div>
-                    <h2 class="experience-sub-title project-title">Projeto 03</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/EduCarmo'">
