--- a/index.html
+++ b/index.html
@@ -208,6 +208,22 @@
                         </button>
                     </div>
                 </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project-2.JPG" alt="Project 1" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Projeto 02</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/EduCarmo'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/EduCarmo'">
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#contact'">
