--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>TypeScript</h3>
-                                <p>Basico</p>
+                                <p>Básico</p>
                             </div>
                         </article>
                         <article>
@@ -156,7 +156,7 @@
                             <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>Node JS</h3>
-                                <p>Bacico</p>
+                                <p>Básico</p>
                             </div>
                         </article>
                         <article>
@@ -193,33 +193,36 @@
         <div class="experience-details-container">
             <div class="about-containers">
                 <div class="details-container color-container">
+                    <h2 class="experience-sub-title project-title">Projeto 01</h2>
                     <div class="article-container">
                         <img src="./assets/project-1.JPG" alt="Project 1" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Projeto 01</h2>
+                    <p class="Project-information">
+                        Desenvolvimento do front-end utilizando React, Bootstrap e Javascritp
+                        Integramção com APIs
+                    </p>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/EduCarmo'">
-                            Github
-                        </button>
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/EduCarmo'">
+                            onclick="location.href='https://bytech-br-frontend-052a59058d4c.herokuapp.com/'">
                             Live Demo
                         </button>
                     </div>
                 </div>
                 <div class="details-container color-container">
+                    <h2 class="experience-sub-title project-title">Projeto 02</h2>
                     <div class="article-container">
                         <img src="./assets/project-2.JPG" alt="Project 1" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Projeto 02</h2>
+                    <p class="Project-information">
+                        Desenvolvimento do front-end utilizando React, JavaScript e CSS
+                    </p>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/EduCarmo'">
+                            onclick="location.href='https://github.com/EduCarmo/Calculadora-React'">
                             Github
                         </button>
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/EduCarmo'">
+                            onclick="location.href='https://educarmo.github.io/Calculadora-React/'">
                             Live Demo
                         </button>
                     </div>
