--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <img src="./assets/project-1.JPG" alt="Project 1" class="project-img">
                     </div>
                     <p class="Project-information">
-                        Desenvolvimento do front-end utilizando React, Bootstrap e Javascritp
+                        Desenvolvimento do front-end utilizando React, Bootstrap, CSS e Javascritp
                         Integramção com APIs
                     </p>
                     <div class="btn-container">
@@ -223,6 +223,26 @@
                         </button>
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://educarmo.github.io/Calculadora-React/'">
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <h2 class="experience-sub-title project-title">Projeto 03</h2>
+                    <div class="article-container">
+                        <img src="./assets/project-3.JPG" alt="Project 1" class="project-img">
+                    </div>
+                    <p class="Project-information">
+                        Desenvolvimento do front-end utilizando React, JavaScript e CSS
+                        Integramção com APIs
+                    </p>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://educarmo.github.io/shopping-cart/'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/EduCarmo/shopping-cart'">
                             Live Demo
                         </button>
                     </div>
