--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
                             <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>Node JS</h3>
-                                <p>Básico</p>
+                                <p>Intermediario</p>
+                            </p>
                             </div>
                         </article>
                         <article>
@@ -238,11 +239,11 @@
                     </p>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://educarmo.github.io/shopping-cart/'">
+                            onclick="location.href='https://github.com/EduCarmo/shopping-cart'">
                             Github
                         </button>
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/EduCarmo/shopping-cart'">
+                            onclick="location.href='https://educarmo.github.io/shopping-cart/'">
                             Live Demo
                         </button>
                     </div>
