inclusão do projeto 04 e 05

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <div>
                                 <h3>Node JS</h3>
                                 <p>Intermediario</p>
-                            </p>
+                                </p>
                             </div>
                         </article>
                         <article>
@@ -244,6 +244,48 @@
                         </button>
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://educarmo.github.io/shopping-cart/'">
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <h2 class="experience-sub-title project-title">Projeto 04</h2>
+                    <div class="article-container">
+                        <img src="./assets/project-4.PNG" alt="Project 1" class="project-img">
+                    </div>
+                    <p class="Project-information">
+                        Desenvolvimento do front-end utilizando HTML, CSS e JavaScript
+                    </p>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/EduCarmo/Piano-Musical'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://educarmo.github.io/Piano-Musical/'">
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <h2 class="experience-sub-title project-title">Projeto 05</h2>
+                    <div class="article-container">
+                        <img src="./assets/project-2.JPG" alt="Project 1" class="project-img">
+                    </div>
+                    <p class="Project-information">
+                        Desenvolvimento do front-end utilizando HTML, CSS e JavaScript
+                    </p>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/EduCarmo/Pixel-Art'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://educarmo.github.io/Pixel-Art/'">
                             Live Demo
                         </button>
                     </div>
