--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <div class="details-container color-container">
                     <h2 class="experience-sub-title project-title">Projeto 05</h2>
                     <div class="article-container">
-                        <img src="./assets/project-2.JPG" alt="Project 1" class="project-img">
+                        <img src="./assets/project-5.jpeg" alt="Project 1" class="project-img">
                     </div>
                     <p class="Project-information">
                         Desenvolvimento do front-end utilizando HTML, CSS e JavaScript
