--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <div class="details-container color-container">
                     <h2 class="experience-sub-title project-title">Projeto 04</h2>
                     <div class="article-container">
-                        <img src="./assets/project-4.PNG" alt="Project 1" class="project-img">
+                        <img src="./assets/project-4.png" alt="Project 1" class="project-img">
                     </div>
                     <p class="Project-information">
                         Desenvolvimento do front-end utilizando HTML, CSS e JavaScript
