Melhorando o layout da foto de perfil

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container" alt="Eduardo Carmo profile picture">
-            <img src="./assets/foto-perfil-edu.png" alt="">
+            <img src="./assets/fotoPerfilEduardo.png" alt="">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Olá, Eu sou </p>
