--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 class="title">Eduardo Carmo</h1>
             <p class="section__text__p2">Desenvolvedor Full Stack</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/curriculo.pdf')">Download CV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/Curriculo.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="window.location.href='#contact'">Contato</button>
 
             </div>
@@ -164,14 +164,14 @@
                             <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>Java</h3>
-                                <p>Intermediario</p>
+                                <p>Básico</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.svg" alt="Experience icon" class="icon">
                             <div>
                                 <h3>Spring Boot</h3>
-                                <p>Intermediario</p>
+                                <p>Básico</p>
                             </div>
                         </article>
                         <article>
